src/test/ui/regions/regions-ret.nll.stderr
error[E0515]: cannot return reference to temporary value
  --> $DIR/regions-ret.rs:4:12
   |
LL |     return &id(3);
   |            ^-----
   |            ||
   |            |temporary value created here
   |            returns a reference to data owned by the current function

error: aborting due to previous error

For more information about this error, try `rustc --explain E0515`.
